Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-for-aa
  namespace: default
spec:
  selector:
    matchLabels:
      app: template-for-aa
  replicas: 2
  template:
    metadata:
      labels:
        app: template-for-aa
    spec:
      containers:
        - name: template-for-aa
          image: cepgbaseacr.azurecr.io/template-for-aa:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 200Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: template-for-aa-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: category-demo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-for-aa-ingress
  namespace: default
spec:
  rules:
    - host: template-for-aa-82272688.ce-aa.kubepia.net
      http:
        paths:
          - path: /
            backend:
              serviceName: template-for-aa-svc
              servicePort: 80
